--- a/layout_settings_v11.json
+++ b/layout_settings_v11.json
@@ -3,6 +3,9 @@
   "run_on_startup": false,
   "start_minimized": true,
   "poll_interval_ms": 100,
+  "idle_poll_interval_ms": 500,
+  "pid_scan_interval_ms": 500,
+  "cache_cleanup_interval_ms": 1000,
   "aggressive_mode": true,
   "log_level": "INFO"
 }
